syntax ="proto3";
package Proto;
    message Data
{
string dataType=1;
string room=2;
map<string, string> info=3;
}